<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">Правда</string>
    <string name="false_button">Ложь</string>
    <string name="next_button">Далее</string>
    <string name="prev_button">Предыдущий</string>
    <string name="correct_toast">Правда</string>
    <string name="incorrect_toast">Ложь</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="previos">previos</string>
    <string name="next">next</string>
    <string name="cheat_button">Cheat!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgment_toast">Читер сука!.</string>
    <string name="title_activity_cheat">CheatActivity</string>
</resources>
